--- a/index.html
+++ b/index.html
@@ -3,23 +3,15 @@
 <head>
     <title>Todo App</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="./script.js"defer></script>
 </head>
 
 <body>
     <h1>Your Todos:</h1>
-    <ul>
-        <li>
-            Study for midterms
-        </li>
-        <li>
-            Cry over 306
-        </li>
-        <li>
-            Play piano
-        </li>
+    <ul id="list">
     </ul>
 
-    <button class="add">Add Task</button>
-    <button class="delete">Delete Task</button>
+    <button id="addbtn" class="add">Add Task</button>
+    <button id="delbtn" class="delete">Delete Task</button>
     
 </body>
